# truth

./: .gitignore  README.md  app.py  example_run.py  fetch_weather_data.py  get_price_request.py  pyproject.toml  setup_environment.sh  truthminer.py
abi/: umactfadapter.json
notebooks/: 01_verify_statement.ipynb  02_verify_uma_vote.ipynb
src/truth/: __init__.py
tests/: test_verifier.py
truth/: __init__.py  actions.py  logger.py  verifier.py
truth/tools/: __init__.py  discord_fetcher.py  discussion_parser.py
